--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <h1> I'm Zachary Nightingale </h1>
 <h2> and here is my cute and small website </h2> <br>
 
-<img src="img/IMG_1347.JPG" alt="A white man with long black hair and a beard holding a bouquet of colerful flowers while wearing a long-sleeve purple crewneck.">
+<img src="img/IMG_1347.jpg" alt="A white man with long black hair and a beard holding a bouquet of colerful flowers while wearing a long-sleeve purple crewneck.">
 <br>
 <br>
 
