--- a/index.html
+++ b/index.html
@@ -4,22 +4,30 @@
     <meta charset="UTF-8">
     <title> zachary nightingale </title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <header>
+        <nav>
+            <img src="img/zn.gif" alt="A black letter 'Z' that rotates into an 'N' that rotates back into 'Z' as an infinite loop.">
+            <a href="index.html"> home </a> </li>
+            <a href="inspiration/inspiration.html"> inspiration </a>
+            <a href="topFive/topFive.html"> top fives </a>
+        </div>
+        </nav>
+    </header>
 
-    <nav>
-        <a href="index.html"> home </a>
-        <a href="inspiration/inspiration.html"> inspiration </a>
-        <a href="topFive/topFive.html"> top fives </a>
-    </nav>
+<h1> Zachary Nightingale </h1>
 
-<h1> I'm Zachary Nightingale </h1>
-<h2> and here is my cute and small website </h2> <br>
-
-<img src="img/IMG_1347.jpg" alt="A white man with long black hair and a beard holding a bouquet of colerful flowers while wearing a long-sleeve purple crewneck.">
-<br>
-<br>
+<div class="selfPortrait">
+<img src="img/self portrait.svg" alt="A white man with long black hair and a beard holding a bouquet of colerful flowers while wearing a long-sleeve purple crewneck.">
+</div>
 
 <p> I am a student, designer, and aspiring creative from Northern California! My current interests <br>
     cover are wide range of activities from producing indie pop music, streaming and posting <br>
