--- a/topFive/topFive.html
+++ b/topFive/topFive.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title> my top 5's </title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
         <body>
 
