--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <header>
         <nav>
             <img src="img/zn.gif" alt="A black letter 'Z' that rotates into an 'N' that rotates back into 'Z' as an infinite loop.">
+            <br>
             <a href="index.html"> home </a> </li>
             <a href="inspiration/inspiration.html"> inspiration </a>
             <a href="topFive/topFive.html"> top fives </a>
@@ -23,7 +24,9 @@
         </nav>
     </header>
 
-<h1> Zachary Nightingale </h1>
+<div class="zn">
+    <h1> Zachary Nightingale </h1>
+</div>
 
 <div class="selfPortrait">
 <img src="img/self portrait.svg" alt="A white man with long black hair and a beard holding a bouquet of colerful flowers while wearing a long-sleeve purple crewneck.">
