--- a/inspiration/inspiration.html
+++ b/inspiration/inspiration.html
@@ -3,14 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <title> Inspirations </title>
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
-
-        <nav>
-            <a href="../index.html"> home </a>
-            <a href="inspiration/inspiration.html"> inspiration </a>
-            <a href="../topFive/topFive.html"> top fives </a>
-        </nav>
+        <header>
+            <nav>
+                <img src="../img/zn.gif" alt="A black letter 'Z' that rotates into an 'N' that rotates back into 'Z' as an infinite loop.">
+                <br>
+                <a href="../index.html"> home </a> </li>
+                <a href="../inspiration/inspiration.html"> inspiration </a>
+                <a href="../topFive/topFive.html"> top fives </a>
+            </nav>
+        </header>
 
 <h2> Here are some of my inspirations </h2>
 
