--- a/topFive/topFive.html
+++ b/topFive/topFive.html
@@ -4,14 +4,24 @@
         <meta charset="UTF-8">
         <title> my top 5's </title>
         <link rel="stylesheet" href="../css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
-        <body>
 
+    <body>
+        <header>
             <nav>
-                <a href="../index.html"> home </a>
+                <img src="../img/zn.gif" alt="A black letter 'Z' that rotates into an 'N' that rotates back into 'Z' as an infinite loop.">
+                <br>
+                <a href="../index.html"> home </a> </li>
                 <a href="../inspiration/inspiration.html"> inspiration </a>
-                <a href="topFive/topFive.html"> top fives </a>
+                <a href="../topFive/topFive.html"> top fives </a>
             </nav>
+        </header>
 
             <h1> Top 5's </h1>
             
