--- a/index.html
+++ b/index.html
@@ -23,24 +23,27 @@
         </nav>
     </header>
 
-<div class="zn">
-    <h1> Zachary Nightingale </h1>
-</div>
 
-<div class="selfPortrait">
-<img src="img/self portrait.svg" alt="A white man with long black hair and a beard holding a bouquet of colerful flowers while wearing a long-sleeve purple crewneck.">
-</div>
+        <div class="zn">
+            <h1> Zachary Nightingale </h1>
 
-<p> I am a student, designer, and aspiring creative from Northern California! My current interests <br>
-    cover are wide range of activities from producing indie pop music, streaming and posting <br>
-    YouTube videos about Super Smash Bros Melee, learning new recipes to cook, and <br>
-    enjoying my part-time job as a barista at a local coffee shop. Sometimes I struggle to <br>
-    find enough time to endulge in all of my favorite parts of life, but I have to remember <br>
-    that as long as I am doing what makes me happy, it's okay to take it slow. In school I am <br>
-    hoping to find a career that lets me be creative and genuinly happy while also being able <br>
-    to get by. That has led me to the Design program, where I am becoming especially interested <br>
-    in design history and user experience. I know I have a lot going on, but I'm excited to see <br>
-    where the field will take me and what the next big part of my life will be! </p>
+            <div id="columnContainer">
+                <p class="paragraph"> I am a student, designer, and aspiring creative from Northern California! My current interests
+                    cover are wide range of activities from producing indie pop music, streaming and posting
+                    YouTube videos about Super Smash Bros Melee, learning new recipes to cook, and
+                    enjoying my part-time job as a barista at a local coffee shop. Sometimes I struggle to
+                    find enough time to endulge in all of my favorite parts of life, but I have to remember
+                    that as long as I am doing what makes me happy, it's okay to take it slow. In school I am
+                    hoping to find a career that lets me be creative and genuinly happy while also being able
+                    to get by. That has led me to the Design program, where I am becoming especially interested
+                    in design history and user experience. I know I have a lot going on, but I'm excited to see
+                    where the field will take me and what the next big part of my life will be! </p>
+
+    <div class id="selfPortrait">
+        <img src="img/self portrait.svg" alt="A white man with long black hair, brown eyes and a beard holding a bouquet of colerful flowers while wearing a long-sleeve purple crewneck.">
+        </div>
+    </div>
+</div>
 
     <footer> 
         <a href="mailto:923755674@sfsu.edu"> Contact </a>
