--- a/inspiration/inspiration.html
+++ b/inspiration/inspiration.html
@@ -24,15 +24,15 @@
 
 <h2>my inspirations:</h2>
 
-<section id="inspoPage">
 <div id="inspoContainer">
 <h3> David M Bird </h3>
 
-<p class="paragraph"> David M Bird is an artist that I first discovered on Instagram when my girlfriend sent me one of his posts. He uses acorns, twigs, leaves, and other natural materials to create what he calls “Becorns.” To me, his work is absolutely adorable and helps me want to connect with nature more at every opportunity. With life being very stressful and busy, these characters, stories, and pictures really take me somewhere else and help me relax. It was interesting reading about his history too, because David Bird was first a designer of lego toys. I admire that he found a way to pursue his passion in a new, more sustainable way, and started to capture inspiring moments like the one I posted here of a squirrel encountering his Becorn. I always look forward to seeing his posts in my feed because he encourages me to be crafty and close to the Earth.</p>
+<p class="inspoParagraph"> David M Bird is an artist that I first discovered on Instagram when my girlfriend sent me one of his posts. He uses acorns, twigs, leaves, and other natural materials to create what he calls “Becorns.” To me, his work is absolutely adorable and helps me want to connect with nature more at every opportunity. With life being very stressful and busy, these characters, stories, and pictures really take me somewhere else and help me relax. It was interesting reading about his history too, because David Bird was first a designer of lego toys. I admire that he found a way to pursue his passion in a new, more sustainable way, and started to capture inspiring moments like the one I posted here of a squirrel encountering his Becorn. I always look forward to seeing his posts in my feed because he encourages me to be crafty and close to the Earth.</p>
 
-<a href="https://www.davidmbird.com/"> David M Bird <br> 
-    <img src="img/becorns 1.png" alt="A squirrel comes face-to-face with a small acorn character sailing down a river in its boat made of twigs.">
-</a> <br>
+<div class="test">
+    <a href="https://www.davidmbird.com/"> David M Bird <br> 
+    <img src="img/becorns 1.png" alt="A squirrel comes face-to-face with a small acorn character sailing down a river in its boat made of twigs."></a>
+</div>
 
 <h3> Amanita Design </h3>
 
