--- a/inspiration/inspiration.html
+++ b/inspiration/inspiration.html
@@ -22,35 +22,34 @@
             </nav>
         </header>
 
-<h2>my inspirations:</h2>
+        <h1>My Inspirations:</h1>
 
-<div id="inspoContainer">
-<h3> David M Bird </h3>
+        <div id="inspoScroll">
 
-<p class="inspoParagraph"> David M Bird is an artist that I first discovered on Instagram when my girlfriend sent me one of his posts. He uses acorns, twigs, leaves, and other natural materials to create what he calls “Becorns.” To me, his work is absolutely adorable and helps me want to connect with nature more at every opportunity. With life being very stressful and busy, these characters, stories, and pictures really take me somewhere else and help me relax. It was interesting reading about his history too, because David Bird was first a designer of lego toys. I admire that he found a way to pursue his passion in a new, more sustainable way, and started to capture inspiring moments like the one I posted here of a squirrel encountering his Becorn. I always look forward to seeing his posts in my feed because he encourages me to be crafty and close to the Earth.</p>
+        <div id="davidContainer">
+                <div class="inspoImg">
+                <a href="https://www.davidmbird.com/"> David M Bird <br> 
+                <img src="img/becorns 1.png" alt="A squirrel comes face-to-face with a small acorn character sailing down a river in its boat made of twigs."></a>
+            </div>
+            <p class="inspoParagraph"> David M Bird is an ex-lego product designer that now uses acorns, twigs, leaves, and other natural materials to create what he calls “Becorns.” His work is absolutely adorable and helps me want to connect with nature more at every opportunity. I admire that he found a way to pursue his passion in a new, more sustainable way.</p>
+        </div>
+        <div id="amanitaContainer">
+            <div class="inspoImg">
+                <a href="https://amanita-design.net/"> Amanita Design <br> 
+                <img src="img/amanita 1.png" alt="A retro-futurist environment where a robot is riding an elevator up the side of a building."></a>
+            </div>
+                <p class="inspoParagraph"> Amanita Design is an indie game developer that makes breathtaking environments in their point-and-click puzzle games. Their games have stunning soundtracks too, and are inspiring to me as <em> Gesamtkunstwerks,</em> or cohesive works of art, and it remind me that simple processes can be really meaningful if you pay attention to the details and take your time.</p>
+        </div>
 
-<div class="test">
-    <a href="https://www.davidmbird.com/"> David M Bird <br> 
-    <img src="img/becorns 1.png" alt="A squirrel comes face-to-face with a small acorn character sailing down a river in its boat made of twigs."></a>
-</div>
-
-<h3> Amanita Design </h3>
-
-<p class="paragraph"> Amanita Design is an indie game developer based out of the Czech Republic. They make breathtaking environments in their point-and-click puzzle games. My favorite is called Samorost 3, (last of the 3 pictures) which tells the story of a “curious space gnome” who travels and interacts with multiple strange planets before stopping an evil corrupt monk from ruining the beauty of the cosmos. Throughout the game there are lots of unique puzzles and challenges that feature audio and musical elements, which gives it a fantastic atmosphere. Paired with experimental electronic producer Floex, this game has one of my favorite soundtracks of all time! The game is inspiring to me as a <em> Gesamtkunstwerk,</em> or cohesive work of art, and it reminds me that simple processes can be really meaningful if you pay attention to the details and take your time.</p>
-
-<a href="https://amanita-design.net/"> Amanita Design <br> 
-    <img src="img/amanita 1.png" alt="A screenshot of a retro-futurist environment where a robot is riding an elevator up the side of a building.">
-</a> <br>
-
-<h3> Hiatus Kaiyote </h3>
-
-<p class="paragraph"> Hiatus Kaiyote is an alternative band from Australia who make some of my favorite music! They play with a lot of complicated rhythmic patterns and chord progressions while somehow maintaining a laid-back feel that isn’t overwhelming. Their songs have mostly acoustic recorded instruments but also feature layers of synths. Nai Palm, the lead singer of Hiatus Kaiyote, is the backbone of the whole band and has such a unique singing style that brings every idea together perfectly. Every member of the group works together really well but never overpowers the other. The most inspiring thing about them to me is the fact that I never find anything else that sounds like them, and every new thing they release is familiar to their style but also different and exciting!</p>
-
-<a href="https://hiatuskaiyote.com/"> Hiatus Kaiyote <br>
-    <img src="img/kaiyote 1.png" alt="Hiatus Kaiyote members Nai Palm, Perrin Moss, Simon Mavin, and Paul Bender pose around and inside of a flat white car with words all across it.">
-</a> <br>
-
-</div>
+        <div id="hiatusContainer">
+            <div class="inspoImg">
+                <a href="https://hiatuskaiyote.com/"> Hiatus Kaiyote <br>
+                <img id="hiatus" src="img/kaiyote 1.png" alt="Hiatus Kaiyote members Nai Palm, Perrin Moss, Simon Mavin, and Paul Bender pose around and inside of a flat white car with words all across it."> </a>
+            </div>
+                <p class="inspoParagraph"> Hiatus Kaiyote is an alternative band from Australia that have a super unique feel. They create complicated rhythmic patterns and chord progressions while somehow maintaining a laid-back vibe that isn't overwhelming. Nai Palm, the lead singer of Hiatus Kaiyote, is the backbone of the whole band and has such a unique singing style that brings every idea together perfectly.</p>
+        </div>
+        </div>
+        </div>
 
         <footer> 
             <a href="mailto:923755674@sfsu.edu"> Contact </a>
