--- a/topFive/topFive.html
+++ b/topFive/topFive.html
@@ -38,7 +38,7 @@
                         <li> <a href="https://www.youtube.com/watch?v=InQI1ML0ELU"> Feelwitchu by Tennyson <br> 
                             <img src="img/rot.png" alt="Luke Pretty's face pressed against the inside wall of a fish tank."> </a> </li>
                     </ol>
-                <h2> my five favorite places to visit </h2>
+                <h2> My five favorite places to visit </h2>
                     <ul> 
                         <li> <a href="https://www.santafe.org/"> Santa Fe, New Mexico <br> 
                             <img src="img/santaFe.jpg" alt="A street with adobe buildings on either side lit by streetlights at night."> </a> </li> <br>
