--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
             <h1> Zachary Nightingale </h1>
 
             <div id="columnContainer">
-                <p class="paragraph"> I am a student, designer, and aspiring creative from Northern California! My current interests
-                    cover are wide range of activities from producing indie pop music, streaming and posting
+                <p class="paragraph"> I am a student, designer, and aspiring creative from Northern California! <br> <br>
+                    My current interests cover are wide range of activities from producing indie pop music, streaming and posting
                     YouTube videos about Super Smash Bros Melee, learning new recipes to cook, and
-                    enjoying my part-time job as a barista at a local coffee shop. Sometimes I struggle to
-                    find enough time to endulge in all of my favorite parts of life, but I have to remember
-                    that as long as I am doing what makes me happy, it's okay to take it slow. In school I am
-                    hoping to find a career that lets me be creative and genuinly happy while also being able
+                    enjoying my part-time job as a barista at a local coffee shop. <br> <br> 
+                    In school I am hoping to find a career that lets me be creative and genuinly happy while also being able
                     to get by. That has led me to the Design program, where I am becoming especially interested
                     in design history and user experience. I know I have a lot going on, but I'm excited to see
                     where the field will take me and what the next big part of my life will be! </p>
