--- a/topFive/topFive.html
+++ b/topFive/topFive.html
@@ -29,7 +29,7 @@
                     <ol>
                         <li> <a href="https://www.youtube.com/watch?v=Yg2s041E7mk"> Like What by Tennyson <br> 
                             <img src="img/likeWhat.jpg" alt="Luke and Tess Pretty sit on a bench."> </a> </li> <br>
-                        <li> <a href="https://www.youtube.com/watch?v=xZI0OFW3VI8"> EMPATHY 4 BETHANY by Say Gray <br> 
+                        <li> <a href="https://www.youtube.com/watch?v=xZI0OFW3VI8"> EMPATHY 4 BETHANY by Saya Gray <br> 
                             <img src="img/sayaGray.png"> </a> </li> <br>
                         <li> <a href="https://www.youtube.com/watch?v=Xf0poQI8wSo"> Pigeonometry by Aesop Rock <br> 
                             <img src="img/aesopRock.png" alt="A busy collage of science projects, mathematics, and a rocket ship with two men looking at a computer in the center."> </a> </li> <br>
