--- a/topFive/topFive.html
+++ b/topFive/topFive.html
@@ -28,68 +28,56 @@
                 <h2> My top five favorite songs </h2>
                     <ol>
                         <li> <a href="https://www.youtube.com/watch?v=Yg2s041E7mk"> Like What by Tennyson <br> 
-                            <img src="img/likeWhat.jpg" alt="Luke and Tess Pretty sit on a bench."> </a> </li> <br>
+                            <img class="songImg" src="img/likeWhat.jpg" alt="Luke and Tess Pretty sit on a bench."> </a> </li> <br>
                         <li> <a href="https://www.youtube.com/watch?v=xZI0OFW3VI8"> EMPATHY 4 BETHANY by Saya Gray <br> 
-                            <img src="img/sayaGray.png"> </a> </li> <br>
+                            <img id="sayaImage" src="img/sayaGray.png"> </a> </li> <br>
                         <li> <a href="https://www.youtube.com/watch?v=Xf0poQI8wSo"> Pigeonometry by Aesop Rock <br> 
-                            <img src="img/aesopRock.png" alt="A busy collage of science projects, mathematics, and a rocket ship with two men looking at a computer in the center."> </a> </li> <br>
+                            <img class="songImg" src="img/aesopRock.png" alt="A busy collage of science projects, mathematics, and a rocket ship with two men looking at a computer in the center."> </a> </li> <br>
                         <li> <a href="https://www.youtube.com/watch?v=kk0WRHV_vt8"> Shofukan by Snarky Puppy <br>
-                            <img src="img/snarky.png" alt="An abstract depiction of multiple skylines in blue and yellow sits beneath the name of the record in plain white text."> </a> </li> <br>
+                            <img class="songImg" src="img/snarky.png" alt="An abstract depiction of multiple skylines in blue and yellow sits beneath the name of the record in plain white text."> </a> </li> <br>
                         <li> <a href="https://www.youtube.com/watch?v=InQI1ML0ELU"> Feelwitchu by Tennyson <br> 
-                            <img src="img/rot.png" alt="Luke Pretty's face pressed against the inside wall of a fish tank."> </a> </li>
+                            <img class="songImg" src="img/rot.png" alt="Luke Pretty's face pressed against the inside wall of a fish tank."> </a> </li>
                     </ol>
                 <h2> My five favorite places to visit </h2>
                     <ul> 
                         <li> <a href="https://www.santafe.org/"> Santa Fe, New Mexico <br> 
-                            <img src="img/santaFe.jpg" alt="A street with adobe buildings on either side lit by streetlights at night."> </a> </li> <br>
+                            <img class="placeImage" src="img/santaFe.jpg" alt="A street with adobe buildings on either side lit by streetlights at night."> </a> </li> <br>
                         <li> <a href="https://en.wikipedia.org/wiki/Sherman_Oaks,_Los_Angeles"> Sherman Oaks, California <br> 
-                            <img src="img/shermanOaks.jpg" alt="A sunny day on a street where palm trees tower over small apartments and businesses."> </a> </li> <br>
+                            <img class="placeImage" src="img/shermanOaks.jpg" alt="A sunny day on a street where palm trees tower over small apartments and businesses."> </a> </li> <br>
                         <li> <a href="https://www.bodegabay.com/"> Bodega Bay, California <br> 
-                            <img src="img/bodegaBay.jpeg" alt="An aerial view of a small town right by the ocean."> </a> </li> <br>
+                            <img class="placeImage" src="img/bodegaBay.jpeg" alt="An aerial view of a small town right by the ocean."> </a> </li> <br>
                         <li> <a href="https://visitpuertovallarta.com/"> Puerto Vallarta, Jalisco <br> 
-                            <img src="img/puertoVallarta.jpg" alt="The shoreline of a colorful and lush city with a boardwalk and boats in the ocean."> </a> </li> <br>
+                            <img class="placeImage" src="img/puertoVallarta.jpg" alt="The shoreline of a colorful and lush city with a boardwalk and boats in the ocean."> </a> </li> <br>
                         <li> <a href="https://www.sandiego.org/articles/about-san-diego-ca.aspx?gad_source=1&gclid=Cj0KCQjwiuC2BhDSARIsALOVfBIfgDKGxnB6XFFQIkdbxcwGWeGupRVib45GBSHqqHprZIYpeIB10ZgaAv50EALw_wcB"> San Diego, California <br> 
-                            <img src="img/sanDiego.jpg" alt="A street packed with skysrapers and lined with evenly spaced palm trees."> </a> </li>
+                            <img class="placeImage" src="img/sanDiego.jpg" alt="A street packed with skysrapers and lined with evenly spaced palm trees."> </a> </li>
                     </ul>
-                <h2> my five favorite trees </h2>
-                    <ul>
+                <h2> My five favorite trees </h2>
+                    <ul id="treeList">
                         <li> <a href="https://www.savetheredwoods.org/redwoods/"> <strong> Redwood </strong> <em> - Sequoia sempervirens </em> <br> 
-                            <img src="img/redwoods.jpg" alt="Towering trees with needle-like leaves surrounding a dirt path."> </a> <br>
-                        <p> I have lived close to redwoods my entire life, and for that reason I have <br>
-                            a close connection to them. They like coastal areas with lots of fog, and <br> 
-                            it makes redwood forests always look magical and mysterious to me. <br> 
-                            The way they reach so high into the sky makes me feel small, and I think <br> 
-                            it is important as a human to remember how big and how important nature is. </p> </li>
+                            <img class="treeImage" src="img/redwoods.jpg" alt="Towering trees with needle-like leaves surrounding a dirt path."> </a> <br>
+                        <p> I have lived close to redwoods my entire life, and for that reason I have
+                            a close connection to them. The fog in redwood forests always looks magical and mysterious to me,
+                            and it's amazing to see how tall they stretch into the sky! </p> </li>
                         <li> <a href="https://en.wikipedia.org/wiki/Ginkgo_biloba"> <strong> Ginkgo </strong> <em> - Ginkgo biloba </em> <br> 
-                            <img src="img/ginkgo.png" alt="A tree in a front yard with vibrant yellow fan-shaped leaves."> </a> <br>
-                        <p> I learned about Ginkgo trees in a botany class I took a year ago, and <br>
-                            they are so fascinating! These trees are a part of the gymnosperm family <br>
-                            alongside many types of palms and pine trees. However, Ginkgos do not <br>
-                            appear naturally in the wild anymore, and have no surviving relatives, <br>
-                            meaning that they are truly one of a kind and are only still around <br>
+                            <img id="ginkgoImage" src="img/ginkgo.png" alt="A tree in a front yard with vibrant yellow fan-shaped leaves."> </a> <br>
+                        <p> Ginkgos do not 
+                            appear naturally in the wild anymore, and have no surviving relatives, 
+                            meaning that they are truly one of a kind and are only still around 
                             because humans have planted them for thousands of years! </p> </li>
                         <li> <a href="https://www.fs.usda.gov/detail/inyo/specialplaces/?cid=stelprdb5129900"> <strong> Bristlecone Pine </strong> <em> - Pinus longaeva </em> <br> 
-                            <img src="img/bristlecone pine.jpg" alt="An old tree with thick, twisting branches that has very few needle-like leaves sitting in a desert."> </a> <br>
-                        <p> The Ancient Bristlecone Pine Forest is perhaps one of the coolest places <br>
-                            I have ever heard about, and it is home to none other than the Bristlecone <br> 
-                            Pines. These trees are some of the oldest living organisms on Earth, with <br>
-                            some of them having been around for 5000 years! It fills me with wonder to <br> 
-                            think about he things they have lived through, and someday I hope to visit <br>
-                            them and just sit in the presence of such wisdom. </p> </li>
+                            <img class="treeImage" src="img/bristlecone pine.jpg" alt="An old tree with thick, twisting branches that has very few needle-like leaves sitting in a desert."> </a> <br>
+                        <p> These trees are some of the oldest living organisms on Earth, with 
+                            some of them having been around for 5000 years! Someday I hope to visit 
+                            them in the California deserts and sit in the presence of their wisdom. </p> </li>
                         <li> <a href="https://calscape.org/Quercus-chrysolepis-(Canyon-Live-Oak)"> <strong> Canyon Live Oak </strong> <em> - Quercus chrysolepis </em> <br> 
-                            <img src="img/oak.jpg" alt="A big tree sprawling out sideways in some grassy hills."> </a> <br>
-                        <p> Canyon Live Oaks are everywhere in California. I come across them all the <br>
-                            time, and I always think they are beautiful. They remind me of the natural <br>
-                            landscape of the west coast and the relationship the native people had <br> 
-                            with their environment. They would burn grasses and small shrubs that <br>
-                            surrounded these oaks regularly, keeping the ecosystem balanced and <br>
-                            healthy. </p> </li>
+                            <img id="oakImage" src="img/oak.jpg" alt="A big tree sprawling out sideways in some grassy hills."> </a> <br>
+                        <p> Oaks remind me of the relationship the native people of the west coast had 
+                            with their environment. They would burn grasses and small shrubs that 
+                            surrounded these oaks regularly, keeping the ecosystem healthy. </p> </li>
                         <li> <a href="https://en.wikipedia.org/wiki/Juniperus_brevifolia"> <strong> Azores Juniper </strong><em> - Juniperus brevifolia </em><br> 
-                            <img src="img/juniper.png" alt="A flat tree hanging over a hillside with long branches."> </a> <br>
-                        <p> Juniper trees come in many variations, but this particular one looks really beautiful <br> 
-                            to me. The way it stretches out and balances its long branches feels to me like <br> 
-                            a perfect harmony. It's also interesting to see other types of Juniper trees <br>
-                            and compare them to this one! </p> </li>
+                            <img class="treeImage" src="img/juniper.png" alt="A flat tree hanging over a hillside with long branches."> </a> <br>
+                        <p> Juniper trees come in many variations, but this particular one looks really beautiful 
+                            to me. I love the way it stretches out and balances its long branches. </p> </li>
                     </ul>
 
             <footer> 
