--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
             <h1> Zachary Nightingale </h1>
 
             <div id="columnContainer">
-                <p class="paragraph"> I am a student, designer, and aspiring creative from Northern California! <br> <br>
+                <p class="paragraph"> I am a student, designer, nature-lover, barista, content creator, and aspiring musician from Northern California. <br> <br>
                     My current interests cover are wide range of activities from producing indie pop music, streaming and posting
                     YouTube videos about Super Smash Bros Melee, learning new recipes to cook, and
-                    enjoying my part-time job as a barista at a local coffee shop. <br> <br> 
-                    In school I am hoping to find a career that lets me be creative and genuinly happy while also being able
-                    to get by. That has led me to the Design program, where I am becoming especially interested
-                    in design history and user experience. I know I have a lot going on, but I'm excited to see
+                    enjoying my part-time job at a local coffee shop. These things all give me joy and satisfaction in their own way and provide a different outlet for my creative energy. When I'm not at school or doing homework, I am always doing one of these things and tend to be very busy because of that. 
+                    Even so, I try to convince myself that it's okay to take it slow and enjoy little things along the way. I work best and enjoy things best when I am well rested and relaxed, so that is how I try to be all the time. <br> <br> 
+                    I attend San Fransisco State University, and am hoping to find a career that lets me be creative and genuinly happy while also being able
+                    to get by. That has led me to studying Visual Communication Design, where I get to study the things that are the most interesting to me and also assist me in my favorite extracurricular activities. Aside from my regular workload,
+                    I currently am working on a research project about the history of the department of design at the school. I've been lucky enough to interview some incredible retired professors
+                    and get fascinating insights on the topic. That has gotten me into design history a lot more, and it's becoming one of my favorite things to study right now. 
+                    Between my many hobbies, classes, part-time job, and research project, I know I have a lot going on, but I'm excited to see
                     where the field will take me and what the next big part of my life will be! </p>
 
     <div class id="selfPortrait">
